--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,9 +24,6 @@
 monitor=,preferred,auto,auto
 monitor=desc:AOC 24G1WG4 0x0001B2CE,highres@highr,auto-up,1
 
-xwayland {
-	force_zero_scaling = true
-}
 
 ###################
 ### MY PROGRAMS ###
@@ -58,8 +55,8 @@ $menu = wofi --show drun
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,15
+env = HYPRCURSOR_SIZE,15
 
 
 ###################
@@ -234,6 +231,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
+bind = $mainMod, F, fullscreen,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
