Changed config to force the default cursor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,7 +47,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-
+exec-once = hyprctl setcursor Adwaita 24
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -55,9 +55,10 @@ $menu = wofi --show drun
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,15
-env = HYPRCURSOR_SIZE,15
-
+env = HYPRCURSOR_THEME,Adwaita
+env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,Adwaita
+env = XCURSOR_SIZE,24
 
 ###################
 ### PERMISSIONS ###
