Added waybar shortcuts

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,8 +46,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-exec-once = hyprctl setcursor Adwaita 24
+exec-once = waybar & hyprpaper
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -55,10 +54,8 @@ exec-once = hyprctl setcursor Adwaita 24
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
-env = HYPRCURSOR_THEME,Adwaita
-env = HYPRCURSOR_SIZE,24
-env = XCURSOR_THEME,Adwaita
-env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,20
+env = XCURSOR_SIZE,20
 
 ###################
 ### PERMISSIONS ###
@@ -238,6 +235,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, D, togglesplit, # dwindle
+bind = $mainMod, W, exec, ~/.config/waybar/toggle_waybar.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
