Changed scaling settings and cursor sizing among wayland and xwayland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,7 +21,8 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=,preferred,auto, auto
+monitor=eDP-1,highres@highr,auto , 1.25
 monitor=desc:AOC 24G1WG4 0x0001B2CE,highres@highr,auto-up,1
 
 
@@ -54,8 +55,9 @@ exec-once = waybar & hyprpaper
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
-env = HYPRCURSOR_SIZE,20
 env = XCURSOR_SIZE,20
+env = HYPRCURSOR_SIZE,20
+exec-once = hyprctl setcursor Adwaita 20
 
 ###################
 ### PERMISSIONS ###
