--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -227,6 +227,11 @@ device {
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+# Custom scripts
+
+bind = $mainMod SHIFT, Q, exec, ~/.config/hypr/scripts/power-menu.zsh
+bind = $mainMod, W, exec, ~/.config/hypr/scripts/toggle-waybar.zsh
+
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
@@ -237,7 +242,6 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, D, togglesplit, # dwindle
-bind = $mainMod, W, exec, ~/.config/waybar/toggle_waybar.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
