--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,7 +47,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper
+exec-once = waybar & hyprpaper & ~/.config/hypr/scripts/generate-hyprpaper-config.zsh
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -55,9 +55,14 @@ exec-once = waybar & hyprpaper
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
+env = GDK_SCALE,1
 env = XCURSOR_SIZE,20
 env = HYPRCURSOR_SIZE,20
 exec-once = hyprctl setcursor Adwaita 20
+
+xwayland {
+  force_zero_scaling = true
+}
 
 ###################
 ### PERMISSIONS ###
@@ -85,7 +90,7 @@ exec-once = hyprctl setcursor Adwaita 20
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
     gaps_in = 1
-    gaps_out = 0
+    gaps_out = 7
 
     border_size = 0
 
@@ -104,7 +109,7 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 1
+    rounding = 2
     rounding_power = 30
 
     # Change transparency of focused and unfocused windows
