--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -21,10 +21,25 @@
     ],
     "clock": {
         "format": "{:%d/%m/%Y %H:%M:%S}",
+	  "tooltip-format": "<tt><small>{calendar}</small></tt>",
+	"calendar": {
+    		"format": {
+      			"months": "<span color='#ffead3'><b>{}</b></span>",
+      			"today": "<span color='#ff6699'><b>{}</b></span>"
+    		}
+  	},
         "interval": 1
     },
     "cpu": {
-        "format": "{usage}% ",
+        "format": "{usage}% CPU",
+
+	"tooltip-format": "<tt><small>{calendar}</small></tt>",
+    	"calendar": {
+      		"format": {
+        		"months": "<span color='#ffead3'><b>{}</b></span>",
+        		"today": "<span color='#ff6699'><b>{}</b></span>"
+      		}
+    	},
         "interval": 1
     },
     "memory": {
@@ -37,11 +52,8 @@
             "warning": 30,
             "critical": 15
         },
-        "format": "{capacity}% {icon}",
-        "format-full": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-icons": ["", "", "", "", ""]
+        "format": "{capacity}% BAT",
+        "interval": 1
     },
     "network": {
         "format-wifi": "{essid} ({signalStrength}%)",
