--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -117,16 +117,16 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = false
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
+        enabled = true
+        range = 20
+        render_power = 10
+        color = rgba(00000088)
     }
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
+        size = 10
         passes = 1
 
         vibrancy = 0.1696
@@ -161,6 +161,7 @@ animations {
     animation = workspaces, 1, 1.94, almostLinear, fade
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
+
 }
 
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
