Corrected spacing between modules in waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,9 +21,9 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto, auto
-monitor=eDP-1,highres@highr,auto , 1.25
-monitor=desc:AOC 24G1WG4 0x0001B2CE,highres@highr,auto-up,1
+monitor=, highres@highr, auto, auto
+monitor=eDP-1, highres@highr, auto , 1.25
+monitor=desc:AOC 24G1WG4 0x0001B2CE, highres@highr, auto-up, 1
 
 
 ###################
