Added config for my other home monitor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,6 +24,7 @@
 monitor=, highres@highr, auto, auto
 monitor=eDP-1, highres@highr, auto , 1.25
 monitor=desc:AOC 24G1WG4 0x0001B2CE, highres@highr, auto-up, 1
+monitor=desc:Samsung Electric Company C24FG7x HTNK500793, highres@highr, auto-up, 1
 
 
 ###################
