--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -110,15 +110,15 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 2
-    rounding_power = 30
+    rounding = 5
+    rounding_power = 15
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
+        enabled = false
         range = 20
         render_power = 10
         color = rgba(00000088)
@@ -126,7 +126,7 @@ decoration {
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
         size = 10
         passes = 1
 
