Enabled window resizing with cursor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -91,7 +91,7 @@ xwayland {
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
     gaps_in = 1
-    gaps_out = 0
+    gaps_out = 1
 
     border_size = 0
 
@@ -100,7 +100,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -110,8 +110,8 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 5
-    rounding_power = 15
+    rounding = 3
+    rounding_power = 20
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
