--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,13 +1,7 @@
 {
-    // "layer": "top", // Waybar at top layer
-    // "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height (to be removed for auto height)
-    // "width": 1280, // Waybar width
-    "spacing": 0, // Gaps between modules (4px)
-    // Choose the order of the modules
+    "spacing": 3,
     "modules-left": [
         "hyprland/workspaces",
-        "hyprland/window"
     ],
     "modules-center": [
 	"clock"
@@ -21,8 +15,8 @@
     ],
     "clock": {
         "format": "{:%d/%m/%Y %H:%M:%S}",
-	  "tooltip-format": "<tt><small>{calendar}</small></tt>",
-	"calendar": {
+	    "tooltip-format": "{calendar}",
+	    "calendar": {
     		"format": {
       			"months": "<span color='#ffead3'><b>{}</b></span>",
       			"today": "<span color='#ff6699'><b>{}</b></span>"
@@ -32,14 +26,6 @@
     },
     "cpu": {
         "format": "{usage}% CPU",
-
-	"tooltip-format": "<tt><small>{calendar}</small></tt>",
-    	"calendar": {
-      		"format": {
-        		"months": "<span color='#ffead3'><b>{}</b></span>",
-        		"today": "<span color='#ff6699'><b>{}</b></span>"
-      		}
-    	},
         "interval": 1
     },
     "memory": {
