--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor=desc:Samsung Electric Company C24FG7x HTNK500793, highres@highr, auto-up
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = kitty -e ranger
 $menu = wofi --show drun
 
 
