Added resizing key with  + Shift

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -256,6 +256,12 @@ bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
+# Resize with Ctrl + Shift + H, J, K, L
+bindel = $mainMod SHIFT, H, resizeactive, -35 0
+bindel = $mainMod SHIFT, J, resizeactive, 0 35
+bindel = $mainMod SHIFT, K, resizeactive, 0 -35
+bindel = $mainMod SHIFT, L, resizeactive, 35 0
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
