Added some improvements for icon choosing when bloutooth acitvated

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -216,7 +216,7 @@ input {
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = true
+    workspace = true
 }
 
 # Example per-device config
